force-app/main/default/objects/ECM_Rec_Matching_Setting__c/ECM_Rec_Matching_Setting__c.object-meta.xml
<CustomObject>
    <description>ECMv2.1</description>
    <label>ECM Rec Matching Setting</label>
    <nameField>
        <displayFormat>ECMRecMatchSetting-{0000}</displayFormat>
        <label>ECM Rec Matching Setting #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECM Rec Matching Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>