force-app/main/default/objects/ECM_Rec_Matching_Setting__c/fields/Do_Not_Clear__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Clear__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ECM v2.1 Job Matching</description>
    <inlineHelpText>When checked this option prevents the criteria for this setting from being cleared when the Clear button is selected in the record matching page. The criteria will only be able to be cleared manually.</inlineHelpText>
    <label>Do Not Clear</label>
    <type>Checkbox</type>
</CustomField>