force-app/main/default/objects/ECM_Rec_Matching_Setting__c/fields/ECM_Record_Matching_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ECM_Record_Matching_Configuration__c</fullName>
    <description>ECMv2.1</description>
    <label>ECM Record Matching Configuration</label>
    <referenceTo>ECM_Record_Matching_Configuration__c</referenceTo>
    <relationshipLabel>ECM Rec Matching Settings</relationshipLabel>
    <relationshipName>ECM_Rec_Matching_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>