force-app/main/default/objects/ECM_Rec_Matching_Setting__c/fields/Matching_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Matching_Criteria__c</fullName>
    <description>ECMv2.1</description>
    <inlineHelpText>Target Equals Source Value(s)
Target Contains at Least One Source Value</inlineHelpText>
    <label>Matching Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>