force-app/main/default/objects/ECM_Rec_Matching_Setting__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>ECMv2.1</description>
    <inlineHelpText>Order that the field appears in the list of criteria on the search page.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>