force-app/main/default/objects/ECM_Rec_Matching_Setting__c/fields/Search_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Search_Field_Label__c</fullName>
    <description>ECMv2.1</description>
    <inlineHelpText>Label to be used to in the search page in the criteria section.</inlineHelpText>
    <label>Search Field Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>