force-app/main/default/objects/ECM_Rec_Matching_Setting__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>ECMv2.1</description>
    <inlineHelpText>The source field used in matching to the target.</inlineHelpText>
    <label>Source Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>