force-app/main/default/objects/ECM_Rec_Matching_Setting__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>ECMv2.1</description>
    <inlineHelpText>The target field to be matched to the source.</inlineHelpText>
    <label>Target Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>